School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_print/println_Var.deca
//Affichage d'une variable avec println
//

{
    int a = 10;
    float b = 11.1;
    println(a);
    println("variable a = ", a);
    println("variable b = ", b);
    println(b);
}