School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_print/println_incorrectVar.deca
//Affichage d'une variable avec println qui n'existe pas dans le context actuel
//erreur attendue : "a" is an invalid expression in Identifier => la variable n'existe pas

{
    println(a);
}